<resources>
    <string name="app_name">ActiveLife Tracker</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
</resources>